# urban.ai

./: .gitignore  .mcp.json  CHANGELOG.md  README.md
.claude/: settings.local.json
.github/workflows/: backup-db.yml  ci.yml  release-gate.yml
Urban-front-main/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  full-build.txt  i18n.ts  instrumentation-client.ts  last-commit.txt  lint-output-utf8.txt  lint-output.txt  next-i18next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  q  railway-front-logs-utf8.txt  runtime.txt  test.txt  tsconfig.tsbuildinfo
Urban-front-main/docs/: auditoria-ui-ux-anfitriao-admin-2026-05-16.md
Urban-front-main/e2e/: a11y.spec.ts  admin-jobs.spec.ts  admin-quality-occupancy.spec.ts  authenticated-mobile-smoke.spec.ts  authenticated-smoke.spec.ts  dashboard-recommendations.spec.ts  email-confirmation.spec.ts  f8-waitlist-to-login.spec.ts  login-post-login.spec.ts  logout.spec.ts  my-plan-billing.spec.ts  onboarding-airbnb-import.spec.ts  plans-checkout-readiness.spec.ts  prelaunch-waitlist-analytics.spec.ts  properties-pricing.spec.ts  pwa-mobile.spec.ts  readonly-gates.spec.ts  release-gate-public.spec.ts  reset-password.spec.ts  smoke.spec.ts  (+2 more)
docs/: RELEASE_NOTES_SPRINT_2026-04-21.md  Relatorio Socios Abril 2026.docx  Relatorio Status 5.docx  analyze_sql.py  auditoria-assumir-operacao-2026-05-13.md  auditoria-produto-lancamento-2026-05-13.md  auditoria-ui-ux-admin-2026-05-16.md  auditoria-ui-ux-anfitriao-2026-05-16.md  avaliacao-projeto-2026-04-16.md  backlog-produto-pos-assuncao.md  banco-antigo-analise.md  banco-antigo-schemas.md  base-socios.md  checklist-seguranca-d13.md  design-system.md  emails_pdf_content.txt  estado-da-IA-e-evolucao.md  estrategia-stays-dados-2026-04-22.md  event-sources-mapping.md  extract_inserts.py  extract_inserts_cols.py  extract_schemas.py  fase-eventos-cobertura-total.md  go-live-manual-checklist.md  next-actions.md  plano-redesign-anfitriao-admin-2026-05-16.md  previa-marketing-socios.html  prompt-agente-checklist-final.md  prompt-agente-testes.md  relatorio-cliente-prestacao-de-contas.md  relatorio-status-dia7.docx  relatorio-status-semanas3-4.md  relatorio-testes-2026-03-18.md  roadmap-100-percent-por-frente-2026-05-17.md  roadmap-4-tracks-2026-05-17.md  roadmap-consolidado-gaps-manuais-2026-05-17.md  roadmap-execucao-restante-2026-05-17.md  roadmap-implementacao-gaps-produto-2026-05-14.md  roadmap-pos-sprint.docx  roadmap-pos-sprint.md  (+6 more)
load-tests/: README.md  config.js  login-flow.js  pricing-recommendation.js  smoke.js
scripts/: release-evidence.js
urban-ai-backend-main/: .env.example  .gitignore  Dockerfile  Dockerfile copy  README.md  backend.txt  backend_utf8.txt  check_db.js  connect.sh  front.txt  front_utf8.txt  package-lock.json  package.json  pnpm-lock.yaml  reset.js  scrap.txt  scrap_utf8.txt  setup_mailersend.js  tsconfig.json
urban-ai-knn-main/: .env.example  DEPRECATED.md  Dockerfile  knn-classifier.js  package.json
urban-pipeline-main/: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  prefect.toml  prefect.yaml  pyproject.toml  pytest.ini  serve.py
urban-pipeline-main/.github/workflows/: mirror.yml
urban-pipeline-main/raw_data_pipeline/: main.py
urban-pipeline-main/raw_data_pipeline/config/: __init__.py  logging_config.py  settings.py
urban-pipeline-main/raw_data_pipeline/config/database/: __init__.py  config.py  credentials.py  prefect_integration.py  templates.py
urban-pipeline-main/raw_data_pipeline/extractors/: s3_extractor.py
urban-pipeline-main/raw_data_pipeline/load/: load_on_mysql.py
urban-pipeline-main/raw_data_pipeline/utils/: aws_helper.py
urban-pipeline-main/spiders_pipeline/: main.py
urban-pipeline-main/spiders_pipeline/config/: settings.py
urban-pipeline-main/spiders_pipeline/resource/: __init__.py
urban-pipeline-main/spiders_pipeline/spiders_triggers/: spiders_triggers.py
urban-pipeline-main/spiders_pipeline/spiders_triggers/interface/: spider_crawl_interface.py
urban-pipeline-main/spiders_pipeline/utils/: check_service.py
urban-pipeline-main/tests/raw_data_pipeline_tests/: __init__.py  conftest.py  test_aws_helper.py  test_database_config.py  test_e2e_complete_flow.py  test_e2e_database_integration.py  test_e2e_infrastructure.py
urban-webscraping-main/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  auth_proxy.py  pyproject.toml  scrapy.cfg  test_spiders.py
urban-webscraping-main/.github/workflows/: mirror.yml
urban-webscraping-main/scratch/: check_user.py  create_refresh_tokens_table.py  manual_jonas_ingest.py  test_camada2.py  test_ticket_master.py  update_user.py
urban-webscraping-main/scripts/: run_all_collectors.sh  test_crawl.py
urban-webscraping-main/scripts/docker_legacy/: Dockerfile  compose.yaml
urban-webscraping-main/tests/: test_auth_proxy.py  test_base_collector.py  test_collector_run_all.py  test_html_venue_base.py  test_marcha_para_jesus.py  test_sp_cultura.py  test_urban_backend_client.py  test_usp_eventos.py  test_venue_collectors.py  test_venue_map.py
urban-webscraping-main/urban_webscrapping/: items.py  loaders.py  pipelines.py  settings.py
urban-webscraping-main/urban_webscrapping/collectors/: __init__.py  _html_venue_base.py  allianz_parque.py  anhembi.py  api_football.py  base_collector.py  espaco_unimed.py  expo_center_norte.py  firecrawl_extractor.py  marcha_para_jesus.py  run_all.py  sao_paulo_expo.py  serpapi_events.py  sp_cultura.py  tavily_search.py  tokio_marine_hall.py  transamerica_expo.py  usp_eventos.py  vibra_sao_paulo.py  wtc_sao_paulo.py
urban-webscraping-main/urban_webscrapping/custom_spider_settings/: eventim-settings.yaml  ticket-master-settings.yaml
urban-webscraping-main/urban_webscrapping/spiders/: blue_ticket.py  even_three.py  eventim.py  ingresse.py  sympla.py  ticket_360.py  ticket_master.py
urban-webscraping-main/urban_webscrapping/utils/: aws_s3_helper.py  llm_extractor.py  ticket_master_spider_helper.py  urban_backend_client.py  venue_map.py
(+531 files in other folders)
